--- a/index.html
+++ b/index.html
@@ -344,88 +344,255 @@ our speakers
 </section>
 
 
-<section id='tickets' class="pb100">
-<div class="container">
-<div class="section_title mb50">
-<h3 class="title">
-Pricing table
-</h3>
+
+
+
+
+
+
+<section id='tickets'>
+
+
+<head>
+
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta name="description" content="Colorlib Templates">
+<meta name="author" content="Colorlib">
+<meta name="keywords" content="Colorlib Templates">
+
+
+<link href="vendor/mdi-font/css/material-design-iconic-font.min.css" rel="stylesheet" media="all">
+<link href="vendor/font-awesome-4.7/css/font-awesome.min.css" rel="stylesheet" media="all">
+
+<style id="" media="all">@font-face {
+  font-family: 'Poppins';
+  font-style: italic;
+  font-weight: 100;
+  src: url(https://colorlib.com/fonts.gstatic.com/s/poppins/v15/pxiAyp8kv8JHgFVrJJLmE0tCMPc.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Poppins';
+  font-style: italic;
+  font-weight: 200;
+  src: url(https://colorlib.com/fonts.gstatic.com/s/poppins/v15/pxiDyp8kv8JHgFVrJJLmv1pVF9eL.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Poppins';
+  font-style: italic;
+  font-weight: 300;
+  src: url(https://colorlib.com/fonts.gstatic.com/s/poppins/v15/pxiDyp8kv8JHgFVrJJLm21lVF9eL.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Poppins';
+  font-style: italic;
+  font-weight: 400;
+  src: url(https://colorlib.com/fonts.gstatic.com/s/poppins/v15/pxiGyp8kv8JHgFVrJJLucHtF.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Poppins';
+  font-style: italic;
+  font-weight: 500;
+  src: url(https://colorlib.com/fonts.gstatic.com/s/poppins/v15/pxiDyp8kv8JHgFVrJJLmg1hVF9eL.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Poppins';
+  font-style: italic;
+  font-weight: 600;
+  src: url(https://colorlib.com/fonts.gstatic.com/s/poppins/v15/pxiDyp8kv8JHgFVrJJLmr19VF9eL.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Poppins';
+  font-style: italic;
+  font-weight: 700;
+  src: url(https://colorlib.com/fonts.gstatic.com/s/poppins/v15/pxiDyp8kv8JHgFVrJJLmy15VF9eL.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Poppins';
+  font-style: italic;
+  font-weight: 800;
+  src: url(https://colorlib.com/fonts.gstatic.com/s/poppins/v15/pxiDyp8kv8JHgFVrJJLm111VF9eL.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Poppins';
+  font-style: italic;
+  font-weight: 900;
+  src: url(https://colorlib.com/fonts.gstatic.com/s/poppins/v15/pxiDyp8kv8JHgFVrJJLm81xVF9eL.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 100;
+  src: url(https://colorlib.com/fonts.gstatic.com/s/poppins/v15/pxiGyp8kv8JHgFVrLPTucHtF.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 200;
+  src: url(https://colorlib.com/fonts.gstatic.com/s/poppins/v15/pxiByp8kv8JHgFVrLFj_Z1xlEA.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 300;
+  src: url(https://colorlib.com/fonts.gstatic.com/s/poppins/v15/pxiByp8kv8JHgFVrLDz8Z1xlEA.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  src: url(https://colorlib.com/fonts.gstatic.com/s/poppins/v15/pxiEyp8kv8JHgFVrJJfedw.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 500;
+  src: url(https://colorlib.com/fonts.gstatic.com/s/poppins/v15/pxiByp8kv8JHgFVrLGT9Z1xlEA.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 600;
+  src: url(https://colorlib.com/fonts.gstatic.com/s/poppins/v15/pxiByp8kv8JHgFVrLEj6Z1xlEA.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 700;
+  src: url(https://colorlib.com/fonts.gstatic.com/s/poppins/v15/pxiByp8kv8JHgFVrLCz7Z1xlEA.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 800;
+  src: url(https://colorlib.com/fonts.gstatic.com/s/poppins/v15/pxiByp8kv8JHgFVrLDD4Z1xlEA.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 900;
+  src: url(https://colorlib.com/fonts.gstatic.com/s/poppins/v15/pxiByp8kv8JHgFVrLBT5Z1xlEA.ttf) format('truetype');
+}
+</style>
+
+<link href="vendor/select2/select2.min.css" rel="stylesheet" media="all">
+<link href="vendor/datepicker/daterangepicker.css" rel="stylesheet" media="all">
+
+<link href="css/main.css" rel="stylesheet" media="all">
+<meta name="robots" content="noindex, follow">
+</head>
+
+<div class="page-wrapper bg-gra-02 p-t-130 p-b-100 font-poppins">
+<div class="wrapper wrapper--w680">
+<div class="card card-4">
+<div class="card-body">
+<h2 class="title">Purchase Ticket</h2>
+<form method="POST">
+<div class="row row-space">
+<div class="col-2">
+<div class="input-group">
+<label class="label">first name</label>
+<input class="input--style-4" type="text" name="first_name">
 </div>
-<div class="row justify-content-center">
-<div class="col-md-4 col-12">
-<div class="price_box active">
-<div class="price_highlight">
-recommended
 </div>
-<div class="price_header">
-<h4>
-Normal
-</h4>
-<h6>
-For the fast ones
-</h6>
-</div>
-<div class="price_tag">
-10 <sup>$</sup>
-</div>
-<div class="price_features">
-<ul>
-<li>
-Early Entrance
-</li>
-<li>
-Front seat
-</li>
-<li>
-Complementary Drinks
-</li>
-<li>
-Promo Gift
-</li>
-</ul>
-</div>
-<div class="price_footer">
-<a href="#" class="btn btn-primary btn-rounded">Purchase</a>
+<div class="col-2">
+<div class="input-group">
+<label class="label">last name</label>
+<input class="input--style-4" type="text" name="last_name">
 </div>
 </div>
 </div>
-<div class="col-md-4 col-12">
-<div class="price_box">
-<div class="price_header">
-<h4>
-Premium
-</h4>
-<h6>
-For the best ones
+<div class="row row-space">
+<div class="col-2">
+<div class="input-group">
+<label class="label">Birthday</label>
+<div class="input-group-icon">
+<input class="input--style-4 js-datepicker" type="text" name="birthday">
+<i class="zmdi zmdi-calendar-note input-icon js-btn-calendar"></i>
 </div>
-<div class="price_tag">
-15 <sup>$</sup>
 </div>
-<div class="price_features">
-<ul>
-<li>
-Early Entrance
-</li>
-<li>
-Front seat
-</li>
-<li>
-Complementary Drinks
-</li>
-<li>
-Promo Gift
-</li>
-</ul>
 </div>
-<div class="price_footer">
-<a href="#" class="btn btn-primary btn-rounded">Purchase</a>
+<div class="col-2">
+<div class="input-group">
+<label class="label">Gender</label>
+<div class="p-t-10">
+<label class="radio-container m-r-45">Male
+<input type="radio" checked="checked" name="gender">
+<span class="checkmark"></span>
+</label>
+<label class="radio-container">Female
+<input type="radio" name="gender">
+<span class="checkmark"></span>
+</label>
+</div>
+</div>
+</div>
+</div>
+<div class="row row-space">
+<div class="col-2">
+<div class="input-group">
+<label class="label">Email</label>
+ <input class="input--style-4" type="email" name="email">
+</div>
+</div>
+<div class="col-2">
+<div class="input-group">
+<label class="label">Phone Number</label>
+<input class="input--style-4" type="text" name="phone">
+</div>
+</div>
+</div>
+<div class="input-group">
+<label class="label">Subject</label>
+<div class="rs-select2 js-select-simple select--no-search">
+<select name="subject">
+<option disabled="disabled" selected="selected">Choose option</option>
+<option>Subject 1</option>
+<option>Subject 2</option>
+<option>Subject 3</option>
+</select>
+<div class="select-dropdown"></div>
+</div>
+</div>
+<div class="p-t-15">
+<button class="btn btn--radius-2 btn--blue" type="submit">Submit</button>
+</div>
+</form>
+</div>
 </div>
 </div>
 </div>
 
-</div>
-</div>
+<script src="vendor/jquery/jquery.min.js"></script>
+
+<script src="vendor/select2/select2.min.js"></script>
+<script src="vendor/datepicker/moment.min.js"></script>
+<script src="vendor/datepicker/daterangepicker.js"></script>
+
+<script src="js/global.js"></script>
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-23581568-13');
+</script>
+<script defer src="../../../../static.cloudflareinsights.com/beacon.min.js" data-cf-beacon='{"rayId":"67776ceacd8f1d4f","token":"cd0b4b3a733644fc843ef0b185f98241","version":"2021.7.0","si":10}'></script>
+
+
+
+
+
 </section>
+
+
+
+
+
+
+
 
 
 <section id='events' class="pb100">
