--- a/index.html
+++ b/index.html
@@ -547,9 +547,9 @@ our speakers
 <div class="rs-select2 js-select-simple select--no-search">
 <select name="subject">
 <option disabled="disabled" selected="selected">Choose option</option>
-<option>Subject 1</option>
-<option>Subject 2</option>
-<option>Subject 3</option>
+<option>Event 1</option>
+<option>Event 2</option>
+<option>Event 3</option>
 </select>
 <div class="select-dropdown"></div>
 </div>
