--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ Prepare yourself for the
 <p class="cover-date">
 12-14 February 2018 - Los Angeles, CA.
 </p>
-<a href="#" class=" btn btn-primary btn-rounded">
+<a href="#tickets" class=" btn btn-primary btn-rounded">
 Buy Tickets Now
 </a>
 </div>
@@ -119,7 +119,7 @@ Prepare yourself for the
 <p class="cover-date">
 12-14 February 2018 - Los Angeles, CA.
 </p>
-<a href="#" class=" btn btn-primary btn-rounded">
+<a href="#tickets" class=" btn btn-primary btn-rounded">
 Buy Tickets Now
 </a>
 </div>
