--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 
 <meta charset="UTF-8">
-<meta name="description" content="Evento -Event Html Template">
-<meta name="keywords" content="Evento , Event , Html, Template">
+<meta name="description" content="Eventribe -Event Html Template">
+<meta name="keywords" content="Eventribe , Event , Html, Template">
 <meta name="author" content="ColorLib">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
