--- a/register.html
+++ b/register.html
@@ -207,7 +207,7 @@
                                     <br>
                                     <div class="screenshot">
                                         <label for="screenshot"><strong>Upload Screenshot: </strong></label>
-                                        <input type="file" id="myFile" name="screenshot">
+                                        <input type="file" id="fileToUpload" name="fileToUpload">
                                     </div>
                                     <label class="text-md-left" for="Age"><strong> Consent :</strong></label>
                                     <div style="text-align: left;" class="checkbox">
@@ -218,7 +218,7 @@
                                         <input style="width: 20px; height: 20px;" type="checkbox" value="15-20">
                                         <label for="vehicle1">&ThinSpace; If organisation found any unfair means used by Participant then Organisation holds the right to disqualify.</label>
                                     </div>
-                                    <button type="submit" class="btn btn-rounded btn-block btn-primary">Submit</button>
+                                    <button type="submit" name="post" class="btn btn-rounded btn-block btn-primary">Submit</button>
                                 </form>
                             </div>
                         </div>
